[FIXED] fixed issue with inter-dependent properties